--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-### Example user template template
-### Example user template
-
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
+# Ignore virtual environments and other generated files 
+venv/ 
+__pycache__/ 
